--- a/server/.env
+++ b/server/.env
@@ -2,4 +2,4 @@ PORT=5000
 # Use this for a local MongoDB instance:
 # MONGO_URI=mongodb://localhost:27017/blockchain-certs
 # OR use your MongoDB Atlas connection string:
-MONGO_URI=mongodb+srv://admin:admin@block-9-codeversity.mxsiriu.mongodb.net/
+MONGO_URI=mongodb://admin:admin@block-9-codeversity-shard-00-00.mxsiriu.mongodb.net:27017,block-9-codeversity-shard-00-01.mxsiriu.mongodb.net:27017,block-9-codeversity-shard-00-02.mxsiriu.mongodb.net:27017/?ssl=true&replicaSet=atlas-xyz-shard-0&authSource=admin&retryWrites=true&w=majority
